--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.weblookandfeel</groupId>
     <artifactId>weblookandfeel</artifactId>
-    <version>1.4-SNAPSHOT</version>
+    <version>1.14-SNAPSHOT</version>
     <properties>
     	<jdk.version>1.7</jdk.version>
     </properties>
@@ -65,7 +65,7 @@
     		<artifactId>rsyntaxtextarea</artifactId>
     		<version>2.0.7</version>
     	</dependency>
-    	<dependency>
+    	<!--<dependency>
     		<groupId>xmlpull</groupId>
     		<artifactId>xmlpull</artifactId>
     		<version>1.1.3.1</version>
@@ -74,11 +74,21 @@
     		<groupId>xpp3</groupId>
     		<artifactId>xpp3_min</artifactId>
     		<version>1.1.4c</version>
-    	</dependency>
+    	</dependency>-->
     	<dependency>
     		<groupId>com.thoughtworks.xstream</groupId>
     		<artifactId>xstream</artifactId>
     		<version>1.4.4</version>
     	</dependency>
     </dependencies>
+    <scm>
+    	<developerConnection>git@github.com:mgarin/weblaf.git</developerConnection>
+    	<url>git@github.com:mgarin/weblaf.git</url>
+    </scm>
+    <issueManagement>
+    	<system>Github</system>
+    	<url>https://github.com/mgarin/weblaf/issues</url>
+    </issueManagement>
+    <name>Web Look &amp; Feel</name>
+    <url>http://www.weblookandfeel.com/</url>
 </project>
