Added deployment methods. Removed Javadoc generation (not necessary at this stage).

--- a/core/pom.xml
+++ b/core/pom.xml
@@ -30,4 +30,12 @@
 			<version>1.4.4</version>
 		</dependency>
 	</dependencies>
+	<build>
+		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-source-plugin</artifactId>
+			</plugin>
+		</plugins>
+	</build>
 </project>
