--- a/examples/pom.xml
+++ b/examples/pom.xml
@@ -15,4 +15,12 @@
     		<version>${parent.version}</version>
     	</dependency>
     </dependencies>
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-source-plugin</artifactId>
+            </plugin>
+        </plugins>
+    </build>
 </project>
