--- a/pom.xml
+++ b/pom.xml
@@ -24,7 +24,7 @@
 		<module>demo</module>
 	</modules>
 	<scm>
-		<url>https://github.com/mikesena/weblaf.git</url>
+		<url>http://github.com/mikesena/weblaf.git</url>
 	</scm>
 	<build>
 		<pluginManagement>
@@ -62,31 +62,5 @@
 				</plugin>
 			</plugins>
 		</pluginManagement>
-		<plugins>
-			<plugin>
-				<groupId>com.github.github</groupId>
-				<artifactId>site-maven-plugin</artifactId>
-				<version>0.6</version>
-				<executions>
-					<execution>
-						<goals>
-							<goal>site</goal>
-						</goals>
-						<phase>site</phase>
-						<configuration>
-							<noJekyll>true</noJekyll>
-							<branch>refs/remotes/mvn-repo</branch>
-							<repositoryName>weblaf</repositoryName>
-							<repositoryOwner>mikesena</repositoryOwner>
-							<message>Creating site for ${project.version}</message>
-							<outputDirectory>${project.build.directory}/mvn-repo</outputDirectory>
-							<includes>
-								<include>**/*</include>
-							</includes>
-						</configuration>
-					</execution>
-				</executions>
-			</plugin>
-		</plugins>
 	</build>
 </project>
