--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,6 @@ jdk:
   - openjdk7
   - openjdk6
 
-env:
-  - TRAVIS_BUILD_DIR=$TRAVIS_BUILD_DIR/build-sbt
-
-script: sbt ++$TRAVIS_SCALA_VERSION test
+script:
+  - cd build-sbt
+  - sbt ++$TRAVIS_SCALA_VERSION test
