Skipping javadoc check on build

--- a/pom.xml
+++ b/pom.xml
@@ -92,6 +92,9 @@
                             </goals>
                         </execution>
                     </executions>
+                    <configuration>
+                        <additionalparam>-Xdoclint:none</additionalparam>
+                    </configuration>
                 </plugin>
             </plugins>
         </pluginManagement>
