SplitPane - WebSplitPaneUI.java - Replaced one-touch button icon with an SVG one from default icons set
Icons
- dark.xml, web.xml - Added hover arrow icons for different directions
- dark.xml - Made dark skin icons brighter
- up.png, left.png, down.png, right.png - Removed as redundant

--- a/modules/ui/src/com/alee/iconset/resources/web.xml
+++ b/modules/ui/src/com/alee/iconset/resources/web.xml
@@ -2,9 +2,13 @@
 
     <!-- General purpose icons -->
     <SvgIcon id="up" path="down.svg" size="16,16" color="80,80,80" rotate="180" />
+    <SvgIcon id="up-hover" path="down.svg" size="16,16" color="black" rotate="180" />
     <SvgIcon id="down" path="down.svg" size="16,16" color="80,80,80" />
+    <SvgIcon id="down-hover" path="down.svg" size="16,16" color="black" />
     <SvgIcon id="left" path="down.svg" size="16,16" color="80,80,80" rotate="90" />
+    <SvgIcon id="left-hover" path="down.svg" size="16,16" color="black" rotate="90" />
     <SvgIcon id="right" path="down.svg" size="16,16" color="80,80,80" rotate="-90" />
+    <SvgIcon id="right-hover" path="down.svg" size="16,16" color="black" rotate="-90" />
     <SvgIcon id="underline" path="underline.svg" size="16,16" color="80,80,80" />
     <SvgIcon id="underline-hover" path="underline.svg" size="16,16" color="black" scale="1.15,1.15" />
     <SvgIcon id="pin" path="pin.svg" size="16,16" color="80,80,80" />
