--- a/modules/ui/src/com/alee/iconset/resources/web.xml
+++ b/modules/ui/src/com/alee/iconset/resources/web.xml
@@ -9,6 +9,14 @@
     <SvgIcon id="left-hover" path="down.svg" size="16,16" color="black" rotate="90" />
     <SvgIcon id="right" path="down.svg" size="16,16" color="80,80,80" rotate="-90" />
     <SvgIcon id="right-hover" path="down.svg" size="16,16" color="black" rotate="-90" />
+    <SvgIcon id="up-big" path="down-big.svg" size="16,16" color="80,80,80" rotate="180" />
+    <SvgIcon id="up-big-hover" path="down-big.svg" size="16,16" color="black" rotate="180" />
+    <SvgIcon id="down-big" path="down-big.svg" size="16,16" color="80,80,80" />
+    <SvgIcon id="down-big-hover" path="down-big.svg" size="16,16" color="black" />
+    <SvgIcon id="left-big" path="down-big.svg" size="16,16" color="80,80,80" rotate="90" />
+    <SvgIcon id="left-big-hover" path="down-big.svg" size="16,16" color="black" rotate="90" />
+    <SvgIcon id="right-big" path="down-big.svg" size="16,16" color="80,80,80" rotate="-90" />
+    <SvgIcon id="right-big-hover" path="down-big.svg" size="16,16" color="black" rotate="-90" />
     <SvgIcon id="underline" path="underline.svg" size="16,16" color="80,80,80" />
     <SvgIcon id="underline-hover" path="underline.svg" size="16,16" color="black" scale="1.15,1.15" />
     <SvgIcon id="pin" path="pin.svg" size="16,16" color="80,80,80" />
