--- a/modules/ui/src/com/alee/iconset/resources/web.xml
+++ b/modules/ui/src/com/alee/iconset/resources/web.xml
@@ -1,49 +1,123 @@
 <IconSet id="weblaf" nearClass="com.alee.iconset.WebIconSet" base="icons/flat/">
 
     <!-- General purpose icons -->
-    <SvgIcon id="underline" path="underline.svg" size="16,16" color="80,80,80" />
-    <SvgIcon id="underline-hover" path="underline.svg" size="16,16" color="black" scale="1.15,1.15" />
-    <SvgIcon id="pin" path="pin.svg" size="16,16" color="80,80,80" />
-    <SvgIcon id="pin-hover" path="pin.svg" size="16,16" color="black" scale="1.15,1.15" />
-    <SvgIcon id="external" path="external.svg" size="16,16" color="80,80,80" />
-    <SvgIcon id="external-hover" path="external.svg" size="16,16" color="black" scale="1.15,1.15" />
-    <SvgIcon id="maximize" path="maximize.svg" size="16,16" color="80,80,80" />
-    <SvgIcon id="maximize-hover" path="maximize.svg" size="16,16" color="black" scale="1.15,1.15" />
-    <SvgIcon id="shrink" path="shrink.svg" size="16,16" color="80,80,80" />
-    <SvgIcon id="shrink-hover" path="shrink.svg" size="16,16" color="black" scale="1.15,1.15" />
-    <SvgIcon id="cross" path="cross.svg" size="16,16" color="80,80,80" />
-    <SvgIcon id="cross-hover" path="cross.svg" size="16,16" color="168,0,22" scale="1.15,1.15" />
-    <SvgIcon id="cross-small" path="cross.svg" size="9,9" color="80,80,80" />
-    <SvgIcon id="cross-small-hover" path="cross.svg" size="9,9" color="168,0,22" scale="1.15,1.15" translate="-0.5,-0.5" />
+    <SvgIcon id="underline" path="underline.svg" size="16,16">
+        <SvgFill selector="svg" color="80,80,80" />
+    </SvgIcon>
+    <SvgIcon id="underline-hover" path="underline.svg" size="16,16">
+        <SvgFill selector="svg" color="black" />
+        <SvgTransform selector="svg" scale="1.15,1.15" />
+    </SvgIcon>
+    <SvgIcon id="pin" path="pin.svg" size="16,16">
+        <SvgFill selector="svg" color="80,80,80" />
+    </SvgIcon>
+    <SvgIcon id="pin-hover" path="pin.svg" size="16,16">
+        <SvgFill selector="svg" color="black" />
+        <SvgTransform selector="svg" scale="1.15,1.15" />
+    </SvgIcon>
+    <SvgIcon id="external" path="external.svg" size="16,16">
+        <SvgFill selector="svg" color="80,80,80" />
+    </SvgIcon>
+    <SvgIcon id="external-hover" path="external.svg" size="16,16">
+        <SvgFill selector="svg" color="black" />
+        <SvgTransform selector="svg" scale="1.15,1.15" />
+    </SvgIcon>
+    <SvgIcon id="maximize" path="maximize.svg" size="16,16">
+        <SvgFill selector="svg" color="80,80,80" />
+    </SvgIcon>
+    <SvgIcon id="maximize-hover" path="maximize.svg" size="16,16">
+        <SvgFill selector="svg" color="black" />
+        <SvgTransform selector="svg" scale="1.15,1.15" />
+    </SvgIcon>
+    <SvgIcon id="shrink" path="shrink.svg" size="16,16">
+        <SvgFill selector="svg" color="80,80,80" />
+    </SvgIcon>
+    <SvgIcon id="shrink-hover" path="shrink.svg" size="16,16">
+        <SvgFill selector="svg" color="black" />
+        <SvgTransform selector="svg" scale="1.15,1.15" />
+    </SvgIcon>
+    <SvgIcon id="cross" path="cross.svg" size="16,16">
+        <SvgFill selector="svg" color="80,80,80" />
+    </SvgIcon>
+    <SvgIcon id="cross-hover" path="cross.svg" size="16,16">
+        <SvgFill selector="svg" color="168,0,22" />
+        <SvgTransform selector="svg" scale="1.15,1.15" />
+    </SvgIcon>
+    <SvgIcon id="cross-small" path="cross.svg" size="9,9">
+        <SvgFill selector="svg" color="80,80,80" />
+    </SvgIcon>
+    <SvgIcon id="cross-small-hover" path="cross.svg" size="9,9">
+        <SvgFill selector="svg" color="168,0,22" />
+        <SvgTransform selector="svg" scale="1.15,1.15" translate="-0.5,-0.5" />
+    </SvgIcon>
 
     <!-- Medium arrow icons -->
-    <SvgIcon id="up" path="down.svg" size="16,16" color="80,80,80" rotate="180" />
-    <SvgIcon id="up-hover" path="down.svg" size="16,16" color="black" rotate="180" />
-    <SvgIcon id="down" path="down.svg" size="16,16" color="80,80,80" />
-    <SvgIcon id="down-hover" path="down.svg" size="16,16" color="black" />
-    <SvgIcon id="left" path="down.svg" size="16,16" color="80,80,80" rotate="90" />
-    <SvgIcon id="left-hover" path="down.svg" size="16,16" color="black" rotate="90" />
-    <SvgIcon id="right" path="down.svg" size="16,16" color="80,80,80" rotate="-90" />
-    <SvgIcon id="right-hover" path="down.svg" size="16,16" color="black" rotate="-90" />
+    <SvgIcon id="up" path="down.svg" size="16,16">
+        <SvgFill selector="svg" color="40,40,40" />
+        <SvgTransform selector="svg" rotate="180" />
+    </SvgIcon>
+    <SvgIcon id="down" path="down.svg" size="16,16">
+        <SvgFill selector="svg" color="40,40,40" />
+    </SvgIcon>
+    <SvgIcon id="left" path="down.svg" size="16,16">
+        <SvgFill selector="svg" color="40,40,40" />
+        <SvgTransform selector="svg" rotate="90" />
+    </SvgIcon>
+    <SvgIcon id="right" path="down.svg" size="16,16">
+        <SvgFill selector="svg" color="40,40,40" />
+        <SvgTransform selector="svg" rotate="-90" />
+    </SvgIcon>
 
     <!-- Small arrow icons -->
-    <SvgIcon id="up-small" path="down-small.svg" size="8,7" color="80,80,80" rotate="180" translate="0,1" />
-    <SvgIcon id="up-small-hover" path="down-small.svg" size="8,7" color="black" rotate="180" translate="0,1" />
-    <SvgIcon id="down-small" path="down-small.svg" size="8,7" color="80,80,80" />
-    <SvgIcon id="down-small-hover" path="down-small.svg" size="8,7" color="black" />
-    <SvgIcon id="left-small" path="down-small.svg" size="8,7" color="80,80,80" rotate="90" />
-    <SvgIcon id="left-small-hover" path="down-small.svg" size="8,7" color="black" rotate="90" />
-    <SvgIcon id="right-small" path="down-small.svg" size="8,7" color="80,80,80" rotate="-90" />
-    <SvgIcon id="right-small-hover" path="down-small.svg" size="8,7" color="black" rotate="-90" />
+    <SvgIcon id="up-small" path="down-small.svg" size="8,7">
+        <SvgFill selector="svg" color="40,40,40" />
+        <SvgTransform selector="svg" rotate="180" translate="0,1" />
+    </SvgIcon>
+    <SvgIcon id="down-small" path="down-small.svg" size="8,7">
+        <SvgFill selector="svg" color="40,40,40" />
+    </SvgIcon>
+    <SvgIcon id="left-small" path="down-small.svg" size="8,7">
+        <SvgFill selector="svg" color="40,40,40" />
+        <SvgTransform selector="svg" rotate="90" />
+    </SvgIcon>
+    <SvgIcon id="right-small" path="down-small.svg" size="8,7">
+        <SvgFill selector="svg" color="40,40,40" />
+        <SvgTransform selector="svg" rotate="-90" />
+    </SvgIcon>
 
     <!-- Large arrow icons -->
-    <SvgIcon id="up-big" path="down-big.svg" size="16,16" color="80,80,80" rotate="180" />
-    <SvgIcon id="up-big-hover" path="down-big.svg" size="16,16" color="black" rotate="180" />
-    <SvgIcon id="down-big" path="down-big.svg" size="16,16" color="80,80,80" />
-    <SvgIcon id="down-big-hover" path="down-big.svg" size="16,16" color="black" />
-    <SvgIcon id="left-big" path="down-big.svg" size="16,16" color="80,80,80" rotate="90" />
-    <SvgIcon id="left-big-hover" path="down-big.svg" size="16,16" color="black" rotate="90" />
-    <SvgIcon id="right-big" path="down-big.svg" size="16,16" color="80,80,80" rotate="-90" />
-    <SvgIcon id="right-big-hover" path="down-big.svg" size="16,16" color="black" rotate="-90" />
+    <SvgIcon id="up-big" path="down-big.svg" size="16,16">
+        <SvgFill selector="svg" color="40,40,40" />
+        <SvgTransform selector="svg" rotate="180" />
+    </SvgIcon>
+    <SvgIcon id="down-big" path="down-big.svg" size="16,16">
+        <SvgFill selector="svg" color="40,40,40" />
+    </SvgIcon>
+    <SvgIcon id="left-big" path="down-big.svg" size="16,16">
+        <SvgFill selector="svg" color="40,40,40" />
+        <SvgTransform selector="svg" rotate="90" />
+    </SvgIcon>
+    <SvgIcon id="right-big" path="down-big.svg" size="16,16">
+        <SvgFill selector="svg" color="40,40,40" />
+        <SvgTransform selector="svg" rotate="-90" />
+    </SvgIcon>
+
+    <!-- Tree icons -->
+    <SvgIcon id="square-plus" path="square-plus.svg" size="11,11">
+        <SvgFill selector=".bg" color="white" />
+        <SvgFill selector=".shape" color="150,150,150" />
+    </SvgIcon>
+    <SvgIcon id="square-plus-disabled" path="square-plus.svg" size="11,11">
+        <SvgFill selector=".bg" color="white" />
+        <SvgFill selector=".shape" color="210,210,210" />
+    </SvgIcon>
+    <SvgIcon id="square-minus" path="square-minus.svg" size="11,11">
+        <SvgFill selector=".bg" color="white" />
+        <SvgFill selector=".shape" color="150,150,150" />
+    </SvgIcon>
+    <SvgIcon id="square-minus-disabled" path="square-minus.svg" size="11,11">
+        <SvgFill selector=".bg" color="white" />
+        <SvgFill selector=".shape" color="210,210,210" />
+    </SvgIcon>
 
 </IconSet>
