PluginManager - Moved `PluginManager` into a separate library module [ #336 ] - PluginManager.java, Plugin.java, DetectedPlugin.java - Proper checks for headless environment
Utilities
- SystemUtils.java - Added headless environment check method
- ImageUtils.java - Removed static icons initialization to avoid issues in headless environment

Build
- build.xml, build.properties - Updated ANT build with new `weblaf-plugin-xxx.jar` artifact
- build.xml, build.properties - Slightly reworked the way classpaths are defined to make them more convenient
- pom.xml - Added for plugin module, slightly updated for other modules

--- a/modules/core/pom.xml
+++ b/modules/core/pom.xml
@@ -13,7 +13,7 @@
     <packaging>jar</packaging>
 
     <name>WebLaF-core</name>
-    <description>WebLaf core components</description>
+    <description>WebLaF core components</description>
 
     <dependencies>
         <dependency>
