--- a/modules/plugin/pom.xml
+++ b/modules/plugin/pom.xml
@@ -9,27 +9,17 @@
         <relativePath>../../</relativePath>
     </parent>
 
-    <artifactId>weblaf-ui</artifactId>
+    <artifactId>weblaf-plugin</artifactId>
     <packaging>jar</packaging>
 
-    <name>WebLaF-UI</name>
-    <description>WebLaF UI components</description>
+    <name>WebLaF-plugin</name>
+    <description>WebLaF plugin manager</description>
 
     <dependencies>
         <dependency>
             <groupId>${project.groupId}</groupId>
             <artifactId>weblaf-core</artifactId>
             <version>${project.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>com.kitfox.svg</groupId>
-            <artifactId>svg-salamander</artifactId>
-            <version>1.0</version>
-        </dependency>
-        <dependency>
-            <groupId>com.fifesoft</groupId>
-            <artifactId>rsyntaxtextarea</artifactId>
-            <version>2.6.0</version>
         </dependency>
     </dependencies>
 
