- Manifest.mf information extended; - Licenses information included to all jars; - build.properties - package set to com.weblookandfeel.

--- a/modules/core/pom.xml
+++ b/modules/core/pom.xml
@@ -12,7 +12,7 @@
     <artifactId>weblaf-core</artifactId>
     <packaging>jar</packaging>
 
-    <name>WebLaF-core</name>
+    <name>WebLaF core library</name>
     <description>WebLaF core components</description>
 
     <dependencies>
