--- a/modules/ui/src/com/alee/iconset/resources/web.xml
+++ b/modules/ui/src/com/alee/iconset/resources/web.xml
@@ -163,55 +163,57 @@
     </SvgIcon>
 
     <!-- File Chooser icons -->
-    <SvgIcon id="backward" path="cross.svg" size="16,16">
+    <SvgIcon id="backward" path="arrow.svg" size="16,16">
+        <SvgFill selector="svg" color="80,80,80" />
+        <SvgTransform selector="svg" rotate="-90" />
+    </SvgIcon>
+    <SvgIcon id="forward" path="arrow.svg" size="16,16">
+        <SvgFill selector="svg" color="80,80,80" />
+        <SvgTransform selector="svg" rotate="90" />
+    </SvgIcon>
+    <SvgIcon id="history" path="history.svg" size="16,16">
         <SvgFill selector="svg" color="80,80,80" />
     </SvgIcon>
-    <SvgIcon id="forward" path="cross.svg" size="16,16">
+    <SvgIcon id="folder-up" path="arrow.svg" size="16,16">
         <SvgFill selector="svg" color="80,80,80" />
     </SvgIcon>
-    <SvgIcon id="history" path="cross.svg" size="16,16">
+    <SvgIcon id="folder-home" path="home.svg" size="16,16">
         <SvgFill selector="svg" color="80,80,80" />
     </SvgIcon>
-    <SvgIcon id="folder-up" path="cross.svg" size="16,16">
+    <SvgIcon id="folder-new" path="folder-new.svg" size="16,16">
         <SvgFill selector="svg" color="80,80,80" />
     </SvgIcon>
-    <SvgIcon id="folder-home" path="cross.svg" size="16,16">
+    <SvgIcon id="refresh" path="refresh.svg" size="16,16">
         <SvgFill selector="svg" color="80,80,80" />
     </SvgIcon>
-    <SvgIcon id="folder-new" path="cross.svg" size="16,16">
+    <SvgIcon id="remove" path="remove.svg" size="16,16">
         <SvgFill selector="svg" color="80,80,80" />
     </SvgIcon>
-    <SvgIcon id="refresh" path="cross.svg" size="16,16">
+    <SvgIcon id="view" path="settings.svg" size="16,16">
         <SvgFill selector="svg" color="80,80,80" />
     </SvgIcon>
-    <SvgIcon id="remove" path="cross.svg" size="16,16">
+    <SvgIcon id="icons" path="icons.svg" size="16,16">
         <SvgFill selector="svg" color="80,80,80" />
     </SvgIcon>
-    <SvgIcon id="view" path="cross.svg" size="16,16">
+    <SvgIcon id="tiles" path="tiles.svg" size="16,16">
         <SvgFill selector="svg" color="80,80,80" />
     </SvgIcon>
-    <SvgIcon id="icons" path="cross.svg" size="16,16">
+    <SvgIcon id="table" path="table.svg" size="16,16">
         <SvgFill selector="svg" color="80,80,80" />
     </SvgIcon>
-    <SvgIcon id="tiles" path="cross.svg" size="16,16">
-        <SvgFill selector="svg" color="80,80,80" />
-    </SvgIcon>
-    <SvgIcon id="table" path="cross.svg" size="16,16">
-        <SvgFill selector="svg" color="80,80,80" />
-    </SvgIcon>
-    <SvgIcon id="accept" path="cross.svg" size="16,16">
-        <SvgFill selector="svg" color="80,80,80" />
+    <SvgIcon id="accept" path="checkmark.svg" size="16,16">
+        <SvgFill selector="svg" color="0,230,0" />
     </SvgIcon>
     <SvgIcon id="cancel" path="cross.svg" size="16,16">
+        <SvgFill selector="svg" color="230,0,0" />
+    </SvgIcon>
+    <SvgIcon id="computer" path="computer.svg" size="16,16">
         <SvgFill selector="svg" color="80,80,80" />
     </SvgIcon>
-    <SvgIcon id="computer" path="cross.svg" size="16,16">
+    <SvgIcon id="dir" path="dir.svg" size="16,16">
         <SvgFill selector="svg" color="80,80,80" />
     </SvgIcon>
-    <SvgIcon id="dir" path="cross.svg" size="16,16">
-        <SvgFill selector="svg" color="80,80,80" />
-    </SvgIcon>
-    <SvgIcon id="edit" path="cross.svg" size="16,16">
+    <SvgIcon id="edit" path="edit.svg" size="16,16">
         <SvgFill selector="svg" color="80,80,80" />
     </SvgIcon>
 
