Fixed `WebSlider` major ticks display update
Slider
- SliderLabels.java - Replacement for default `JSlider.SmartHashtable` which contains a few issues
- slider.xml, StyleId.java - Added basic style for slider labels

Project
- intellij-idea-code-style.xml - Updated IntelliJ Idea code style settings
- .gitignore - Updated ignore settings

--- a/.gitignore
+++ b/.gitignore
@@ -1,22 +1,22 @@
 # Build artifacts
-artifacts
-target
+/artifacts/
+target/
 
 # IntelliJ IDEA project & module files
-.idea
+/.idea
 *.iml
 
-out/
-gif/
-modules/test/
-uml/
+/out/
+/gif/
+/modules/test/
+/uml/
 
-presentation.txt
-style-readme.txt
-widget.html
-todo-npe.txt
-todo-old.txt
-todo.txt
-download.html
-done.txt
-jdk8migration.txt
+/presentation.txt
+/style-readme.txt
+/widget.html
+/todo-npe.txt
+/todo-old.txt
+/todo.txt
+/download.html
+/done.txt
+/jdk8migration.txt
