--- a/modules/ui/pom.xml
+++ b/modules/ui/pom.xml
@@ -31,6 +31,12 @@
             <artifactId>rsyntaxtextarea</artifactId>
             <version>2.6.0</version>
         </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.12</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
     <build>
