IconManager - Added XSDs for XML icon sets, icon data and other serialized objects - web.xml, dark.xml, icons.xml, info-icons.xml - Added xmlns references - icons.xml - Fixed redundant size declaration

--- a/modules/ui/src/com/alee/iconset/resources/web.xml
+++ b/modules/ui/src/com/alee/iconset/resources/web.xml
@@ -1,4 +1,4 @@
-<IconSet id="weblaf" nearClass="com.alee.iconset.WebIconSet" base="icons/flat/">
+<IconSet id="weblaf" nearClass="com.alee.iconset.WebIconSet" base="icons/flat/" xmlns="http://weblookandfeel.com/icons">
 
     <!-- General purpose icons -->
     <SvgIcon id="underline" path="underline.svg" size="16,16">
