--- a/modules/ui/src/com/alee/iconset/resources/web.xml
+++ b/modules/ui/src/com/alee/iconset/resources/web.xml
@@ -66,6 +66,13 @@
         <SvgFill selector="svg" color="black" />
         <SvgTransform selector="svg" scale="1.15,1.15" />
     </SvgIcon>
+    <SvgIcon id="filter" path="filter.svg" size="16,16">
+        <SvgFill selector="svg" color="80,80,80" />
+        <SvgTransform selector="svg" scale="0.85,0.85" />
+    </SvgIcon>
+    <SvgIcon id="filter-hover" path="filter.svg" size="16,16">
+        <SvgFill selector="svg" color="black" />
+    </SvgIcon>
     <SvgIcon id="globe" path="globe.svg" size="16,16">
         <SvgFill selector="svg" color="80,80,80" />
     </SvgIcon>
