--- a/modules/demo/pom.xml
+++ b/modules/demo/pom.xml
@@ -21,6 +21,11 @@
             <artifactId>weblaf-ui</artifactId>
             <version>${project.version}</version>
         </dependency>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-simple</artifactId>
+            <version>1.7.25</version>
+        </dependency>
     </dependencies>
 
     <build>
