--- a/modules/demo/pom.xml
+++ b/modules/demo/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>com.weblookandfeel</groupId>
         <artifactId>weblaf-parent</artifactId>
-        <version>1.2.9-SNAPSHOT</version>
+        <version>1.2.9</version>
         <relativePath>../../</relativePath>
     </parent>
 
